Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This includes the one-time onboarding fee and any other charges apart from the monthly billable amount.</inlineHelpText>
    <label>Additional Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>