Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Audience_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Audience_Request_Notes__c</fullName>
    <label>Audience Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>