Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Billing_Phone_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone_Email__c</fullName>
    <description>Phone number or email of billing contact</description>
    <label>Billing Phone or Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>