Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <label>Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>One-Time Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>