Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Contract_Information_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Information_Reviewed_Date__c</fullName>
    <label>Contract Information Reviewed Date</label>
    <type>Date</type>
</CustomField>