Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Contracting_Billing_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Billing_Entity_Name__c</fullName>
    <formula>Billing_Account__r.Contracting_Billing_Entity_Name__c</formula>
    <label>Contracting/Billing Entity Name</label>
    <type>Text</type>
</CustomField>