Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Data_Sets_Included__c.field-meta.xml
<CustomField>
    <fullName>Data_Sets_Included__c</fullName>
    <label>Custom/Unique Data Sets Included</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>