Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <displayFormat>EYEOTA-{YYYY}{MM}-{0000}</displayFormat>
    <label>Deal ID</label>
    <type>AutoNumber</type>
</CustomField>