Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <inlineHelpText>Please choose what the deal type is. If &apos;Others&apos;, please fill in the &quot;Deal Notes&quot; field.</inlineHelpText>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eyeota Social</fullName>
            </value>
            <value>
                <fullName>DSP CPM</fullName>
                <default>true</default>
                <label>DSP CPM</label>
            </value>
            <value>
                <fullName>DSP Flat Fee</fullName>
            </value>
            <value>
                <fullName>DMP CPM</fullName>
            </value>
            <value>
                <fullName>DMP Flat Fee</fullName>
            </value>
            <value>
                <fullName>PDMP</fullName>
            </value>
            <value>
                <fullName>Site Optimization Subscription</fullName>
            </value>
            <value>
                <fullName>On-boarding Subscription</fullName>
            </value>
            <value>
                <fullName>Distribution Subscription</fullName>
            </value>
            <value>
                <fullName>OOH Media Owner Licensed</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CPM</fullName>
                <isActive>false</isActive>
                <label>CPM</label>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
                <isActive>false</isActive>
                <label>Flat Fee</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>