Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/ebsta1__Ebsta_Score__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Ebsta_Score__c</fullName>
    <label>Ebsta Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>