Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/ebsta1__Last_month_emails_exchanged_inbound__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Last_month_emails_exchanged_inbound__c</fullName>
    <label>Last month emails exchanged inbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>