Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/ebsta1__Last_week_emails_exchanged_outbound__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Last_week_emails_exchanged_outbound__c</fullName>
    <label>Last week emails exchanged outbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>