Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Follow_up_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Feedback__c</fullName>
    <label>Follow-up Feedback</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>