Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Fulfilment_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Confirmation__c</fullName>
    <description>Date fulfilment was confirmed</description>
    <label>Fulfilment Confirmation</label>
    <type>Date</type>
</CustomField>