Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Link_to_Performance_Report__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Performance_Report__c</fullName>
    <inlineHelpText>Used to monitor revenue across custom segments with a minimum spend clause.</inlineHelpText>
    <label>Link to Performance Report</label>
    <type>Url</type>
</CustomField>