Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Minimum_Fee__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minimum Fee</label>
    <type>Checkbox</type>
</CustomField>