Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Next_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Schedule__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Billing Schedule</label>
    <type>Date</type>
</CustomField>