Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Next_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Refresh_Date__c</fullName>
    <formula>CASE(CEILING( MONTH ( TODAY ()) / 3) ,
1,DATE(2020,01,01),
2,DATE(2020,04,01),
3,DATE(2020,07,01),
4,DATE(2020,10,01),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Refresh Date</label>
    <type>Date</type>
</CustomField>