Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Proactive</fullName>
                <label>Proactive: Audience Playbook</label>
            </value>
            <value>
                <fullName>Proactive: Outreach Emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>