Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Owned_by_Current_User_s_Team__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Current_User_s_Team__c</fullName>
    <formula>IF( Owner.Division = $User.Division ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by Current User&apos;s Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>