Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Owner_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Owner_Nickname__c</fullName>
    <formula>Owner.CommunityNickname</formula>
    <label>Owner Nickname</label>
    <type>Text</type>
</CustomField>