Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <formula>Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>