Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/PDMP_Form_Attached__c.field-meta.xml
<CustomField>
    <fullName>PDMP_Form_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDMP Form Attached</label>
    <type>Checkbox</type>
</CustomField>