Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/PDMP_Supplier__c.field-meta.xml
<CustomField>
    <fullName>PDMP_Supplier__c</fullName>
    <label>PDMP Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Media</fullName>
            </value>
            <value>
                <fullName>Honest John</fullName>
            </value>
            <value>
                <fullName>Experian/ Boots Advantage</fullName>
            </value>
            <value>
                <fullName>Lastminute</fullName>
            </value>
            <value>
                <fullName>DelidataX</fullName>
            </value>
            <value>
                <fullName>Detik.com</fullName>
            </value>
            <value>
                <fullName>DAX</fullName>
            </value>
            <value>
                <fullName>Alodokter</fullName>
            </value>
            <value>
                <fullName>Enlinea Sdn Bhd (Nuren Group)</fullName>
            </value>
            <value>
                <fullName>REA</fullName>
            </value>
            <value>
                <fullName>Vertical Health</fullName>
            </value>
            <value>
                <fullName>YouGov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>