Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Pitch__c.field-meta.xml
<CustomField>
    <fullName>Pitch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pitch?</label>
    <type>Checkbox</type>
</CustomField>