Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>