Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Proposal_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sent_Date__c</fullName>
    <label>Proposal Sent Date</label>
    <type>Date</type>
</CustomField>