Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Recruited_by__c.field-meta.xml
<CustomField>
    <fullName>Recruited_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Commercial Growth person who closed the initial deal.</description>
    <label>Recruited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>