Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brief</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>Supplier Focused Playbook</fullName>
            </value>
            <value>
                <fullName>Vertical Focused Playbook</fullName>
            </value>
            <value>
                <fullName>Audience Profile Playbook</fullName>
            </value>
            <value>
                <fullName>Client Specific Playbook</fullName>
            </value>
            <value>
                <fullName>Playbook</fullName>
                <isActive>false</isActive>
                <label>General Playbook</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>