Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Send_Opportunity_to_Data_Desk__c.field-meta.xml
<CustomField>
    <fullName>Send_Opportunity_to_Data_Desk__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if you would like to send a ticket to the Data Desk using information from this Opportunity.</inlineHelpText>
    <label>Send Opportunity to Data Desk</label>
    <type>Checkbox</type>
</CustomField>