Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <formula>Case__r.SuppliedEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sender</label>
    <type>Text</type>
</CustomField>