Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>This date is when Eyeota starts billing for monthly billable amount. For Onboarding Opportunities, this date is when Eyeota starts billing the client for Maintenance Fee.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>