Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <formula>Amount +  IF(ISNULL(Additional_Fees__c),0,Additional_Fees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Amount and Additional Fees</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>