Production/01-02-2025/force-app/main/default/objects/Opportunity/fields/Unfulfilled_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Unfulfilled_Vertical__c</fullName>
    <label>Unfulfilled Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>