Production/01-02-2025/force-app/main/default/objects/Opportunity/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <businessProcess>Commercial</businessProcess>
    <description>Opportunity record type for Commercial Team Opportunities, including those from the Data Desk.</description>
    <label>Commercial</label>
</RecordType>