Production/01-02-2025/force-app/main/default/objects/Opportunity/recordTypes/Growth.recordType-meta.xml
<RecordType>
    <fullName>Growth</fullName>
    <active>true</active>
    <businessProcess>Growth</businessProcess>
    <description>Opportunity record type for Growth Team Opportunities.</description>
    <label>Growth</label>
</RecordType>