Production/01-02-2025/force-app/main/default/objects/Opportunity/validationRules/Contract_Signed_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Signed_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Maintenance_Start_Date__c)=FALSE,AND(Probability!=1, Send_email_alert_for_IO__c=FALSE))</errorConditionFormula>
    <errorMessage>Please only fill in the Contract Signed Date once this deal has been closed, Probability has been marked as 100% and the Send Email Alert for IO box has been checked.</errorMessage>
</ValidationRule>