Production/01-02-2025/force-app/main/default/objects/Opportunity/validationRules/Eyeota_Social.validationRule-meta.xml
<ValidationRule>
    <fullName>Eyeota_Social</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Deal_Type__c)= &apos;Eyeota Social&apos;
 ,
AND( Forward_Opportunity_to_Data_Desk__c=TRUE, (OR(ISNULL(End_Date__c)=TRUE, 
OR(ISNULL(Start_Date__c)=TRUE,
OR(ISNULL(Audience_Request_Notes__c)=TRUE,
ISNULL(Platforms_Used__c)=TRUE))))
))</errorConditionFormula>
    <errorMessage>Please fill in the required fields below:
Start Date
End Date
Audience Request Notes
Platforms Used</errorMessage>
</ValidationRule>