Production/01-02-2025/force-app/main/default/objects/Opportunity/validationRules/If_DMP_Flat_Fee_Update_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>If_DMP_Flat_Fee_Update_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Deal_Type__c,&quot;DMP Flat Fee&quot;),ISBLANK(Amount))</errorConditionFormula>
    <errorMessage>Please fill in the Amount field to save this record.</errorMessage>
</ValidationRule>