Production/01-02-2025/force-app/main/default/objects/Opportunity/validationRules/If_Onboarding_Sub_Update_Deal_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Onboarding_Sub_Update_Deal_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Deal_Type__c,&quot;On-boarding Subscription&quot;),ISBLANK(Deal_Notes__c))</errorConditionFormula>
    <errorMessage>Please fill in the Deal Notes field to save this record.</errorMessage>
</ValidationRule>