Production/01-02-2025/force-app/main/default/objects/Opportunity/validationRules/If_PDMP_Update_PDMP_Supplier.validationRule-meta.xml
<ValidationRule>
    <fullName>If_PDMP_Update_PDMP_Supplier</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Deal_Type__c,&quot;PDMP&quot;),ISPICKVAL( PDMP_Supplier__c,&quot;&quot; ))</errorConditionFormula>
    <errorMessage>Please fill in the PDMP Supplier field for this PDMP Opportunity.</errorMessage>
</ValidationRule>