Production/01-02-2025/force-app/main/default/objects/Opportunity/validationRules/If_Stage_is_Closed_Lost_Update_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Stage_is_Closed_Lost_Update_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName,&quot;Closed Lost&quot;),ISBLANK(Closed_Lost_Deferred_Reason__c))</errorConditionFormula>
    <errorMessage>Please fill in the Closed Lost/Deferred Reason field to save this record.</errorMessage>
</ValidationRule>