Production/01-02-2025/force-app/main/default/objects/Opportunity/validationRules/If_Status_is_Closed_Won_Need_IO.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Closed_Won_Need_IO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(OR(TEXT(Deal_Type__c)=&quot;DSP CPM&quot;, TEXT(Deal_Type__c)=&quot;DMP CPM&quot; )),AND(TEXT(StageName) = &quot;Closed Won&quot;, Send_email_alert_for_IO__c = FALSE))</errorConditionFormula>
    <errorMessage>Please make sure to attach the IO to this Opportunity and check the &quot;Send email alert for IO&quot; field before updating the Stage to Closed Won.</errorMessage>
</ValidationRule>