Production/01-02-2025/force-app/main/default/objects/Opportunity/listViews/All_Opportunities_from_Data_Desk.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_from_Data_Desk</fullName>
    <columns>Groove_Ticket_Number__c</columns>
    <columns>Case__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Platforms_Used__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Owner_Assignment_from_Groove__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Source__c</field>
        <operation>equals</operation>
        <value>Data Desk</value>
    </filters>
    <filters>
        <field>Groove_Ticket_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Opportunities from Data Desk</label>
</ListView>