Production/01-02-2025/force-app/main/default/objects/Opportunity/listViews/Closed_Won_Non_CPM_Deals.listView-meta.xml
<ListView>
    <fullName>Closed_Won_Non_CPM_Deals</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Deal_Type__c</columns>
    <columns>Minimum_Fee__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Billing_Account__c</columns>
    <columns>Contracting_Billing_Entity_Name__c</columns>
    <columns>Billing_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Monthly_Billable_Amount__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Platforms_Used__c</columns>
    <columns>Data_Sets_Included__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won,Confirmed</value>
    </filters>
    <filters>
        <field>Deal_Type__c</field>
        <operation>notEqual</operation>
        <value>DMP CPM,DSP CPM</value>
    </filters>
    <filters>
        <field>Minimum_Fee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Closed Won Non-CPM Deals</label>
</ListView>